Opened 15 years ago

Closed 15 years ago

#775 closed defect (fixed)

fuzzed .avi makes a loop in ffmpeg

Reported by: Diana Muscalu Owned by:
Priority: important Component: avformat
Version: git-master Keywords: avi loop
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

use zzuf -c -s474 -r0.001:1 ffmpeg_g -i oneminute.avi -f null -

Attachments (1)

oneminute.avi (911.0 KB ) - added by Diana Muscalu 15 years ago.
use this file in ffmpeg to reproduce the loop

Download all attachments as: .zip

Change History (2)

by Diana Muscalu, 15 years ago

Attachment: oneminute.avi added

use this file in ffmpeg to reproduce the loop

comment:1 by Michael Niedermayer, 15 years ago

Component: FFmpegavformat
Keywords: avi loop added
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.