avidec: Fix infinite loop caused by rounding of timestamps in non interleaved avis. Fixes Ticket775 Bug found by: Diana Elena Muscalu

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit e098fba5d9c9d52aaddd83e63dd910ff20b841d2)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>